# llm-ml-educational-assistant

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  web_api.py
.github/workflows/: ci.yml
configs/: base.yaml  colab_light.yaml  colab_t4.yaml  dev_cpu.yaml  web_light_cpu.yaml
data/: README.md
data/examples/: attention_vs_recurrence.md  colab_tips.md  data_quality.md  eval_qa.json  evaluation_metrics.md  faiss_notes.txt  hallucination_examples.md  pipeline_steps.md  prompting_rules.txt  rag_intro.txt  rag_limits.txt  transformers.md  vector_search.txt
docs/: index.html
notebooks/: colab_retrieval_ablation_20260311.ipynb  colab_retrieval_ablation_20260312.ipynb  eda_real_data_v1.ipynb  rag_baseline.ipynb
reports/eval/: README.md  manual_eval_template.json
reports/retrieval_metrics/: README.md  final_profile_colab_20260311.json  history.jsonl  (+2 more)
scripts/: archive_artifacts.py  build_eval_from_cleaned.py  build_holdout_split.py  clean_processed_datasets.py  evaluate_artifacts_retrieval.py  evaluate_retrieval.py  prepare_datasets.py  run_local_pipeline.py  run_rag_regression.py  run_retrieval_ablation.py  smoke_test.py  validate_manual_eval.py  validate_serving_bundle.py  validate_split_integrity.py
tests/: test_ablation_utils.py  test_chunking.py  test_context_assembler.py  test_data_cleaning.py  test_data_split.py  test_eval_validation.py  test_prompt_builder.py  test_rag_pipeline.py  test_regression_utils.py  test_retriever_persistence.py  test_serving.py  test_split_integrity.py
web/: app.js  index.html  styles.css
(+71 files in other folders)
