[project]
name = "llm-ml-assistant"
version = "0.1.0"
description = "LLM + ML assistant project"
authors = [{name = "Nursultan"}]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]